welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:5: error: not found: value color
	(getCouleurSol():color.yellow);
                         ^